adding some changes from the referee report

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -1,7 +1,6 @@
 % zip files.zip ms.tex abstract.tex intro.tex method.tex results.tex conclusion.tex acknowledgements.tex appendix.tex CMD_cuts_double.pdf main_figure.pdf gap.pdf vb_vs_teff.pdf vb_vz.pdf field_comparison.pdf bib.bib ms.pdf
 
-
-\documentclass[useAMS, usenatbib, preprint, 12pt]{aastex}
+\documentclass[useAMS, usenatbib, preprint, 12pt]{aastex63}
 \usepackage{cite, natbib}
 \usepackage{float}
 \usepackage{amsmath}
@@ -99,7 +98,8 @@
     Yuxi Lu$^{3, 1}$,  % signed off
     Lauren Anderson$^8$}  % signed off
 
-\altaffiltext{\amnh}{Department of Astrophysics, American Museum of Natural
+\altaffiltext{\amnh}{
+    Department of Astrophysics, American Museum of Natural
 History, 200 Central Park West, Manhattan, NY, USA}
 \altaffiltext{\cca}{Center for Computational Astrophysics, Flatiron Institute,
 162 5th Avenue, Manhattan, NY, USA}
@@ -116,22 +116,22 @@ University of New York, Manhattan, NY, USA}
 \altaffiltext{\carnegie}{Observatories of the Carnegie Institution for
 Science, 813 Santa Barbara Street, Pasadena, CA 91101, USA}
 
-\begin{abstract}
-    \include{abstract}
-\end{abstract}
+% \begin{abstract}
+%     \include{abstract}
+% \end{abstract}
 
-\include{intro}
+% \include{intro}
 
-\include{method}
+% \include{method}
 
-\include{results}
+% \include{results}
 
-\include{conclusion}
+% \include{conclusion}
 
-\include{acknowledgements}
+% \include{acknowledgements}
 
-\include{appendix}
+% \include{appendix}
 
-\bibliographystyle{plainnat}
-\bibliography{bib.bib}
+% \bibliographystyle{plainnat}
+% \bibliography{bib.bib}
 \end{document}
