--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -1,10 +1,10 @@
 The rotational evolution of cool dwarfs is poorly constrained after $\sim$1-2
 Gyr due to a lack of precise ages and rotation periods for old main-sequence
 stars.
-In this work, we use the velocity dispersions of groups of low-mass \kepler\
-dwarfs as an age proxy, to reveal the temperature-dependent rotational
-evolution of these stars, and demonstrate that kinematic ages could be a
-useful tool for calibrating gyrochronology in future.
+In this work, we use velocity dispersion as an age proxy to reveal the
+temperature-dependent rotational evolution of groups of low-mass \kepler\
+dwarfs, and demonstrate that kinematic ages could be a useful tool for
+calibrating gyrochronology in future.
 We find that a linear gyrochronology model, calibrated to fit the
 period--\teff\ relationship of the Praesepe cluster, does not apply to stars
 older than around 1 Gyr.
