changes from jackie's comments

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1075,6 +1075,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{matt2015,
+       author = {{Matt}, Sean P. and {Brun}, A. Sacha and {Baraffe {\it et al}}, Isabelle},
+        title = "{The Mass-dependence of Angular Momentum Evolution in Sun-like Stars}",
+      journal = {\apjl},
+     keywords = {magnetohydrodynamics: MHD, stars: evolution, stars: late-type, stars: magnetic field, stars: rotation, stars: winds, outflows, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = jan,
+       volume = {799},
+       number = {2},
+          eid = {L23},
+        pages = {L23},
+          doi = {10.1088/2041-8205/799/2/L23},
+archivePrefix = {arXiv},
+       eprint = {1412.4786},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...799L..23M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{stark1989,
        author = {{Stark}, Antony A. and {Brand}, Jan},
         title = "{Kinematics of Molecular Clouds. II. New Data on Nearby Giant Molecular Clouds}",
@@ -1689,3 +1709,92 @@ archivePrefix = {arXiv},
     Volume = {156},
     Year = 2018,
     Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}}
+
+
+@ARTICLE{schmidt2007,
+       author = {{Schmidt}, Sarah J. and {Cruz}, Kelle L. and {Bongiorno {\it et al}}},
+        title = "{Activity and Kinematics of Ultracool Dwarfs, Including an Amazing Flare Observation}",
+      journal = {\aj},
+     keywords = {Galaxy: stellar content, solar neighborhood, stars: activity, stars: flare, stars: late-type, stars: low-mass, brown dwarfs, Astrophysics},
+         year = 2007,
+        month = may,
+       volume = {133},
+       number = {5},
+        pages = {2258-2273},
+          doi = {10.1086/512158},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0701055},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007AJ....133.2258S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{gizis2000,
+       author = {{Gizis}, John E. and {Monet}, David G. and {Reid {\it et al}}},
+        title = "{New Neighbors from 2MASS: Activity and Kinematics at the Bottom of the Main Sequence}",
+      journal = {\aj},
+     keywords = {Galaxy: Solar Neighborhood, Stars: Activity, Stars: Kinematics, Stars: Low-Mass, Brown Dwarfs, Stars: Luminosity Function, Mass Function, Astrophysics},
+         year = 2000,
+        month = aug,
+       volume = {120},
+       number = {2},
+        pages = {1085-1099},
+          doi = {10.1086/301456},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0004361},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000AJ....120.1085G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{reid1995,
+       author = {{Reid}, I. Neill and {Hawley}, Suzanne L. and {Gizis}, John E.},
+        title = "{The Palomar/MSU Nearby-Star Spectroscopic Survey. I. The Northern M Dwarfs -Bandstrengths and Kinematics}",
+      journal = {\aj},
+     keywords = {STARS: FUNDAMENTAL PARAMETERS, SURVEYS, STARS: PECULIAR, STARS: LUMINOSITY FUNCTION},
+         year = 1995,
+        month = oct,
+       volume = {110},
+        pages = {1838},
+          doi = {10.1086/117655},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1995AJ....110.1838R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{west2004,
+       author = {{West}, Andrew A. and {Hawley}, Suzanne L. and {Walkowicz {\it et al}}, Lucianne M.},
+        title = "{Spectroscopic Properties of Cool Stars in the Sloan Digital Sky Survey: An Analysis of Magnetic Activity and a Search for Subdwarfs}",
+      journal = {\aj},
+     keywords = {Galaxy: Structure, Galaxy: Solar Neighborhood, Stars: Activity, Stars: Late-Type, Stars: Low-Mass, Brown Dwarfs, Stars: Subdwarfs, Astrophysics},
+         year = 2004,
+        month = jul,
+       volume = {128},
+       number = {1},
+        pages = {426-436},
+          doi = {10.1086/421364},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0403486},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004AJ....128..426W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{west2006,
+       author = {{West}, Andrew A. and {Bochanski}, John J. and {Hawley {\it et al}}, Suzanne L.},
+        title = "{Using the Galactic Dynamics of M7 Dwarfs to Infer the Evolution of Their Magnetic Activity}",
+      journal = {\aj},
+     keywords = {Galaxy: Kinematics and Dynamics, Galaxy: Structure, Galaxy: Solar Neighborhood, Stars: Activity, Stars: Late-Type, Stars: Low-Mass, Brown Dwarfs, Astrophysics},
+         year = 2006,
+        month = dec,
+       volume = {132},
+       number = {6},
+        pages = {2507-2512},
+          doi = {10.1086/508652},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0609001},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006AJ....132.2507W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
